crates/sm-merge/tests/snapshots/child_lists__a_reorder_and_an_edit_to_the_reordered_element_both_apply.snap
---
source: crates/sm-merge/tests/child_lists.rs
expression: run.render()
---
rebuilt ours program
  rebuilt ours class_declaration
    splice ours class "class"
    splice theirs identifier "C" lead=ours" "
    rebuilt ours class_body lead=ours" "
      splice ours { "{"
      splice theirs method_declaration "void b() {\n    y();\n  }" lead=ours"\n  "
      splice theirs method_declaration "void a() {\n    x();\n    z();\n  }" lead=ours"\n\n  "
      splice ours } "}" lead=ours"\n"
