crates/sm-merge/tests/snapshots/child_lists__disjoint_member_additions_both_apply.snap
---
source: crates/sm-merge/tests/child_lists.rs
expression: run.render()
---
rebuilt ours program
  rebuilt ours class_declaration
    splice ours class "class"
    splice theirs identifier "C" lead=ours" "
    rebuilt ours class_body lead=ours" "
      splice ours { "{"
      splice theirs method_declaration "void a() {}" lead=ours"\n  "
      splice ours method_declaration "void b() {}" lead=ours"\n\n  "
      splice theirs method_declaration "void c() {}" lead=theirs"\n\n  "
      splice ours } "}" lead=ours"\n"
